--- a/oralta/oralta.html
+++ b/oralta/oralta.html
@@ -20,7 +20,7 @@
             <a href="oralta.html" class="logo">ORALTA</a>
             <ul class="nav-list">
                 <li>
-                    <a href="/index/index.html" class="nav-link">AlexShadow3</a>
+                    <a href="../index.html" class="nav-link">AlexShadow3</a>
                 </li>
                 <li>
                     <a href="https://alexandrebobis.github.io" class="nav-link">Mon compte professionnel</a>
