--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="primary-header">
         <nav class="navbar container">
-            <a href="oralta.html" class="logo">ALEXSHADOW3</a>
+            <a href="index.html" class="logo">ALEXSHADOW3</a>
             <ul class="nav-list">
                 <li>
                     <a href="/oralta/oralta.html" class="nav-link">Oralta</a>
