--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="https://alexandrebobis.github.io" class="nav-link">Mon compte professionnel</a>
                 </li>
                 <li>
-                    <a href="my_game/You are the last of them/index.html" class="nav-link">Mon jeu (en réparation)</a>
+                    <a href="my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">123</a>
