--- a/my_game/You are the last of them/index.html
+++ b/my_game/You are the last of them/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="outerContainer">
-        <h3 class="written-in-ink"><a href="https://alexshadow3.github.io">RETURN TO MY PAGE</a></h3>
+        <h3 class="written-in-ink"><a href="https://alexshadow3.github.io">ACCÈS À MA PAGE PERSONNELLE</a></h3>
 
         <div id="controls" class="buttons">
           <a id="rewind" title="Restart story from beginning">Restart</a>
