--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <a href="index.html" class="logo">ALEXSHADOW3</a>
             <ul class="nav-list">
                 <li>
+                    <a href="https://alexandrebobis.github.io" class="nav-link">Alexandre BOBIS</a>
+                </li>
+                <li>
                     <a href="/oralta/oralta.html" class="nav-link">Oralta</a>
                 </li>
                 <li>
-                    <a href="https://alexandrebobis.github.io" class="nav-link">Mon compte professionnel</a>
-                </li>
-                <li>
-                    <a href="my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
+                    <a href="https://alexandrebobis.github.io/my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">123</a>
@@ -31,15 +31,22 @@
                 </li>
             </ul>
             <a href="#" class="button">Book now</a>
+            <button class="translate" id="fr-fr">French</button>
+            <button class="translate" id="en-gb">English</button>
+            <ul>
+                <li class="lang" key="HOME"></li>
+                <li class="lang" key="ABOUT"></li>
+                <li class="lang" key="CONTACT"></li>
+            </ul>
         </nav>
     </header>
     <section class="Meliodas">
         <img src="../images/Meliodas.png" alt="Meliodas" width="10%" height="10%">
-        <p>Bienvenue sur mon site web personnel !</p>
+        <p class="lang" key="MELIODAS"></p>
     </section>
     <section class="Oralta">
-        <img src="../images/Oralta.png" alt="Oralta" width="10%" height="10%">
-        <p>Vous pouvez aussi découvrir mon projet Oralta</p>
+        <a href="oralta/oralta.html"><img src="../images/Oralta.png" alt="Oralta" width="10%" height="10%"></a>
+        <p>Vous pouvez aussi découvrir mon projet Oralta en cliquant sur l'image</p>
     </section>
     <footer>
         <p>© 2023 AlexShadow3</p>
