--- a/oralta/oralta.html
+++ b/oralta/oralta.html
@@ -26,7 +26,7 @@
                     <a href="https://alexandrebobis.github.io" class="nav-link">Mon compte professionnel</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link">123</a>
+                    <a href="https://alexandrebobis.github.io/my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">123</a>
