--- a/index.html
+++ b/index.html
@@ -33,16 +33,11 @@
             <a href="#" class="button">Book now</a>
             <button class="translate" id="fr-fr">French</button>
             <button class="translate" id="en-gb">English</button>
-            <ul>
-                <li class="lang" key="HOME"></li>
-                <li class="lang" key="ABOUT"></li>
-                <li class="lang" key="CONTACT"></li>
-            </ul>
         </nav>
     </header>
     <section class="Meliodas">
         <img src="../images/Meliodas.png" alt="Meliodas" width="10%" height="10%">
-        <p class="lang" key="MELIODAS"></p>
+        <p class="lang" key="MELIODAS">Bienvenue sur mon site web personnel !</p>
     </section>
     <section class="Oralta">
         <a href="oralta/oralta.html"><img src="../images/Oralta.png" alt="Oralta" width="10%" height="10%"></a>
