--- a/oralta/oralta.html
+++ b/oralta/oralta.html
@@ -23,7 +23,7 @@
                     <a href="../index.html" class="nav-link">AlexShadow3</a>
                 </li>
                 <li>
-                    <a href="https://alexandrebobis.github.io" class="nav-link">Mon compte professionnel</a>
+                    <a href="https://alexandrebobis.github.io" class="nav-link">Alexandre BOBIS</a>
                 </li>
                 <li>
                     <a href="https://alexandrebobis.github.io/my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
