--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
                     <a href="#" class="nav-link">123</a>
                 </li>
             </ul>
-            <a href="#" class="button">Book now</a>
-            <button class="translate" id="fr-fr">French</button>
-            <button class="translate" id="en-gb">English</button>
+            <button class="translate" id="fr-fr">French 🇫🇷</button>
+            <button class="translate" id="en-gb">English 🇺🇸/🇬🇧</button>
         </nav>
     </header>
     <section class="Meliodas">
