--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
             <a href="index.html" class="logo">ALEXSHADOW3</a>
             <ul class="nav-list">
                 <li>
-                    <a href="https://alexandrebobis.github.io" class="nav-link">Alexandre BOBIS</a>
+                    <a href="/oralta/oralta.html" class="nav-link">ORALTA</a>
                 </li>
                 <li>
-                    <a href="/oralta/oralta.html" class="nav-link">Oralta</a>
-                </li>
-                <li>
-                    <a href="https://alexandrebobis.github.io/my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
+                    <a href="/my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">123</a>
@@ -30,8 +27,8 @@
                     <a href="#" class="nav-link">123</a>
                 </li>
             </ul>
-            <button class="translate" id="fr-fr">French 🇫🇷</button>
-            <button class="translate" id="en-gb">English 🇺🇸/🇬🇧</button>
+            <button class="translate" id="fr-fr">Français</button>
+            <button class="translate" id="en-gb">English</button>
         </nav>
     </header>
     <section class="Meliodas">
@@ -40,7 +37,7 @@
     </section>
     <section class="Oralta">
         <a href="oralta/oralta.html"><img src="../images/Oralta.png" alt="Oralta" width="10%" height="10%"></a>
-        <p>Vous pouvez aussi découvrir mon projet Oralta en cliquant sur l'image</p>
+        <pclass="lang" key="ORALTA">Vous pouvez aussi découvrir mon projet Oralta en cliquant sur l'image</p>
     </section>
     <footer>
         <p>© 2023 AlexShadow3</p>
