--- a/oralta/oralta.html
+++ b/oralta/oralta.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../images/Oralta.png" />
     <link href="oralta.css" rel="stylesheet">
     <script src="oralta.js" type="module" defer></script>
+    <script src="../index.js" type="module" defer></script>
 </head>
 <body>
     <div>
@@ -23,10 +24,7 @@
                     <a href="../index.html" class="nav-link">AlexShadow3</a>
                 </li>
                 <li>
-                    <a href="https://alexandrebobis.github.io" class="nav-link">Alexandre BOBIS</a>
-                </li>
-                <li>
-                    <a href="https://alexandrebobis.github.io/my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
+                    <a href="../my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">123</a>
@@ -35,8 +33,16 @@
                     <a href="#" class="nav-link">123</a>
                 </li>
             </ul>
-            <a href="#" class="button">Book now</a>
+            <button class="translate" id="fr-fr">Français</button>
+            <button class="translate" id="en-gb">English</button>
         </nav>
     </header>
+
+    <section class="discord">
+        <iframe src="https://discord.com/widget?id=1081198419751731280&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    </section>
+    <section class="youtube">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLV88FWz5rCuaQPf2c_aCPcgAwcfN6xJUO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </section>
 </body>
 </html>
