Add QR Code page
Add QR Code Page
Change links to the pages

--- a/oralta/oralta.html
+++ b/oralta/oralta.html
@@ -27,7 +27,7 @@
                     <a href="../my_game/You are the last of them/index.html" class="nav-link">Mon jeu</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link">123</a>
+                    <a href="../qrcode/qrcode.html" class="nav-link">QR Codes</a>
                 </li>
                 <li>
                     <a href="#" class="nav-link">123</a>
