--- a/my_game/You are the last of them/index.html
+++ b/my_game/You are the last of them/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="outerContainer">
-        <h3 class="written-in-ink"><a href="https://alexshadow.github.io">ALEXSHADOW</a></h3>
+        <h3 class="written-in-ink"><a href="https://alexshadow3.github.io">ALEXSHADOW</a></h3>
         <div id="controls" class="buttons">
             <a id="rewind" title="Restart story from beginning">Recommencer</a>
             <a id="save" title="Save progress">Sauvegarder</a>
