--- a/qrcode/qrcode.html
+++ b/qrcode/qrcode.html
@@ -34,7 +34,7 @@
     </header>
     <section class="qr_code_gene">
         <label>Entrez un texte ou un lien.</label>
-        <input type="text" class="qr_texte" placeholder="https://alexshadow.github.io" onchange="generateur()">
+        <input type="text" class="qr_texte" placeholder="https://alexshadow3.github.io" onchange="generateur()">
         <div class="qr_code"></div>
     </section>
     <footer>
